fix col sizes in flex container on mobile #95 #93

--- a/assets/sass/_helper.scss
+++ b/assets/sass/_helper.scss
@@ -149,6 +149,13 @@
   width: 100%;
 }
 
+// Fix flex columns on mobile
+@media screen and (max-width: $screen-xs-max) {
+  [class*=col-] {
+    width: 100%;
+  }
+}
+
 /**
 * Images
 */
